# vde-2

./: CMakeLists.txt  Macros.cmake
.github/workflows/: ci.yml
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/vdemgmt/: CMakeLists.txt
src/vde_cryptcab/: CMakeLists.txt
src/vde_over_ns/: CMakeLists.txt
src/vde_router/: CMakeLists.txt
src/vde_switch/: CMakeLists.txt
src/vde_switch/plugins/: CMakeLists.txt
src/vde_vxlan/: CMakeLists.txt
src/vdetaplib/: CMakeLists.txt
